Fix h1 position to use text-align center

--- a/style.css
+++ b/style.css
@@ -13,5 +13,5 @@ body {
 }
 
 h1 {
-  position: center;
+  text-align: center;
 }
